app/assets/stylesheets/main.css
/*  
Sticky Footer Solution
by Steve Hatcher 
http://stever.ca
http://www.cssstickyfooter.com
*/

* {margin:0;
padding:0;
} 

/* must declare 0 margins on everything, also for main layout components use padding, not 
vertical margins (top and bottom) to add spacing, else those margins get added to total height 
and your footer gets pushed down a bit more, creating vertical scroll bars in the browser */

html, body {
    height: 100%;
}

#wrap {
    min-height: 100%;
}

#main {
    width:963px;
    margin:0 auto 0 auto;
    overflow:hidden;
    padding-bottom: 30px;
}  /* must be same height as the footer */

#footer_stripe {
    position: relative;
    margin-top: -30px; /* negative value of footer height */
    height: 30px;
    background: #4c2d00;
}
/* end of sticky footer */
/* start of main css */
body {
    font-family:sans-serif;
    height:100%;
    width:100%;
    background:#f9f8de url("../images/texture-beige.png");
}
.logo_link {
    position: absolute;
    display:block;
    background:transparent;
    height: 80px;
    width:270px;
}
#header {
    padding-top:3px;
    width: 950px;
    height: 80px;
    margin: 0 auto;
    position: relative;
    z-index: 9000;
    color: #FFF;
    background: url("../images/logo.png") no-repeat bottom left;
}

#header_stripe {
    width: 100%;
    height: 30px;
    background: #4c2d00;
    position: absolute;
    top: 30px;
}

#header_container {
    width:100%;
    position: relative;
    height: 80px;
}
p.header {
    margin:30px 0 0 282px;
    color:#f9f8de;
    font-family:helvetica,sans-serif;
    font-weight:bold;
    border-left:2px solid #a1916f;
    padding:4px 0 4px 20px;
}
ul#list-nav {
    list-style:none;
    padding: 30px 9px 0 0;
    margin:0 auto;
    width:386px;
    color: #f9f8de;
    float:right;
}

ul#list-nav li {
    display:inline;
} 
ul#list-nav li span {
    position:absolute;
    top:5px;
    right:16px;
    text-decoration:none;
    font-family: helvetica;
    font-size: 10pt;
    height:21px;
    color:#4c2d00;
    padding:4px 0 0 20px;
    text-align:center;
    margin: 0 auto;
}
ul#list-nav li a {
    text-decoration:none;
    font-family: helvetica;
    font-size: 10pt;
    width:70px;
    height:21px;
    color:#f9f8de;
    float:right;
    padding:4px 0 0 0;
    text-align:center;
    margin: 0 auto;
}

ul#list-nav li a:hover {
    color:#f49032;
}

ul#list-nav li.active a:link, ul#list-nav li.active a:visited{
    height:24px;
    border:1px solid #f9f8de;
    border-bottom:none;
    -webkit-border-top-left-radius: 6px;
    -webkit-border-top-right-radius: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background:#f9f8de url("../images/texture-beige.png");
    color:#4c2d00;
}
#footer {
    padding-top:6px;
    width:950px;
    margin:0 auto;
}
#footer p {
    color:#f9f8de;
    float:right;
    font-family:helvetica,sans-serif;
    font-weight:bold;
}
#feature_holder {
    margin-top:15px;
    padding:20px 0 20px 20px;
    width:950px;
    height:175px;
    background: url("../images/background-featured.png") no-repeat;
}
#feature {
    padding:8px 0 0 8px;
    float:left;
    width:166px;
    height:166px;
    background: url("../images/border-large.png") no-repeat;
}

#feature_description {
    padding:5px 0 0 25px;
    float:left;
    width:560px;
    height:166px;
}
#feature_ribbon {
    margin:11px 4px 0 0;
    float:right;
    width:175px;
    height:176px;
    background: url("../images/featured-app-ribbon.png") no-repeat;
}
p.feature_title {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:26pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.feature_subtitle {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:14pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.feature_discription {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:18pt;
    text-shadow: 1px 1px 0px #FFFFFF;
    line-height:120%;
}
p.feature_info {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:10pt;
    text-shadow: 1px 1px 0px #FFFFFF;
    width:470px;
}
#app_holder {
    margin-top:15px;
    padding:20px 0 0 5px;
    width:960px;
    height:175px;
 }
#apps_holder {
    width:960px;
    height:310px;
}
.app {
    margin:0 -2px 0 0;
    float:left;
    width:320px;
    height:170px;
    background: url("../images/applist-single-cell.png") no-repeat;
}
.app_logo {
    padding:7px 0 0 7px;
    margin:25px 0 0 25px;
    float:left;
    width:117px;
    height:114px;
    background: url("../images/border-small.png") no-repeat;
    
}
.app_discription {
    padding:25px 0 0 16px;
    float:left;
    width:150px;
    height:110px;
}
p.title {
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:16pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.subtitle {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:10pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.discription {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:12pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
#launch_holder {
    width:175px;
    height:165px;
    float:right;
    background:url("../images/launch-background.png") no-repeat;
}
#launch {
    border:none;
    display:block;
    margin:54px 0 0 -1px;
    width:166px;
    height:0;
    padding-top:57px;
    background:url("../images/launch.png") no-repeat;
    background-position:0 0;
    overflow:hidden;
}
#launch:hover {
    background-position:0 -57px;
}
#submit_holder {
    width:175px;
    height:165px;
    float:right;
    background:url("../images/launch-background.png") no-repeat;
}
#submit {
    border:none;
    display:block;
    margin:54px 0 0 -1px;
    width:166px;
    height:0;
    padding-top:58px;
    background:url("../images/submit.png") no-repeat;
    background-position:0 0;
    overflow:hidden;
}
#submit:hover {
     background-position:0 -58px;
}
/* ... */

